# vimconfig

./: .gitignore  config.bat  config.sh  git_use.txt  help.txt  obtain.bat  readme.md
config/: _vimrc
config/vimfiles/: .netrwbook  .netrwhist  coc-settings.json  record.txt
config/vimfiles/autoload/: .netrwhist  git配置.txt
config/vimfiles/complete/: cmake_command.txt  cmake_keyword.txt  frq.txt
config/vimfiles/complete/cmake/: cmake_keyword.txt  cmake_system_information.txt
config/vimfiles/complete/dictionary/: add_to_dict_from_editing.txt  cpp-keywords.txt  cpp-std-header.txt  cpp-std.txt  dclean.py  qtbase-dict.txt
config/vimfiles/complete/thesaurus/: cpp.txt
config/vimfiles/pack/: git_use.txt
config/vimfiles/pack/MyVim/start/PlugTest/plugin/: PlugTest.vim
config/vimfiles/pack/MyVim/start/linlin-popup-menu/: readme.md
config/vimfiles/pack/MyVim/start/linlin-popup-menu/autoload/: linlin_popup_menu.vim
config/vimfiles/pack/MyVim/start/linlin-popup-menu/plugin/: linlin_popup_menu.txt  linlin_popup_menu.vim
config/vimfiles/pack/MyVim/start/me/: r.txt
config/vimfiles/pack/MyVim/start/me/plugin/: me.vim  run_qt.py  testvim.vim
config/vimfiles/test-plugin/: easy-align.txt
config/vimfiles/tmp/: CMakeLists.txt  run_qt.py  widget.cpp  widget.h  widget.qrc  xmake.lua
config/vimfiles/vim-session/: cpp-basic.vim
config/vimfiles/vim-settings/: basic-settings.vim  depend-on-settings.vim  plug-settings.vim  use-method.md
tools/linux/: mac2unix  unix2dos
